--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,73 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <%- include('../partials/head')%>
-        <link rel="stylesheet" href="/css/login.css">
-        <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
-
 <body>
-
     <%- include('../partials/header')%>
-        <main>
+    <main>
+        <form action="/users/login/" method="POST">
+            <span class="material-symbols-outlined">account_circle</span>
 
-            <form action="/users/login/" method="POST">
-                <span class="material-symbols-outlined">account_circle</span>
-
-                <div>
-                    <label>Email</label>
-                    <input 
+            <div>
+                <label>Email</label>
+                <input 
                     type="email" 
                     id="email" 
                     name="email"
                     class="form-control <%= locals.errors && errors.email ? 'is-invalid' : null %>"
-                    value="<%= locals.oldData ? oldData.email : null %>">
-                    
-                    <% if (locals.errors && errors.email) { %>
-                        <div class="text-danger"
-                        style="color: red;">
-                            <%= errors.email.msg %> 
-                        </div>
-                    <% } %>
-                </div>
+                    value="<%= locals.oldData ? oldData.email : '' %>">
+                <p class="error"></p>
 
-                <div>
-                    <label>Contraseña</label>
-                    <input 
+                <% if (locals.errors && errors.email) { %>
+                <div class="text-danger"
+                     style="color: red;">
+                    <%= errors.email.msg %> 
+                </div>
+                <% } %>
+            </div>
+
+            <div>
+                <label>Contraseña</label>
+                <input 
                     type="password" 
                     id="contrasena" 
                     name="contrasena"
                     class="form-control <%= locals.errors && errors.contrasena ? 'is-invalid' : null %>"
-                    value="<%= locals.oldData ? oldData.contrasena : null %>">
-                    
-                    <% if (locals.errors && errors.contrasena) { %>
-                        <div class="text-danger"
-                        style="color: red;">
-                            <%= errors.contrasena.msg %> 
-                        </div>
-                    <% } %>
+                    value="<%= locals.oldData ? oldData.contrasena : '' %>">
+                <p class="error"></p>
+                
+                <% if (locals.errors && errors.contrasena) { %>
+                <div class="text-danger"
+                     style="color: red;">
+                    <%= errors.contrasena.msg %> 
                 </div>
+                <% } %>
+            </div>
 
-                <label class="cursiva">Recordar datos</label>
-                <label class="cursiva">¿Olvidaste la constraseña?</label>
-                <button>
-                    <input type="submit" value="ingresar">
-                </button>
-                <br>
-                <label for="">mantener sesion iniciada</label>
-                <input type="checkbox" name="remember" id="">
-                <br>
-                <p class="registro"><a href="/users/register">Registrate</a></p>
-                <span class="material-symbols-outlined email">mail</span>
-            </form>
-
-
-
-        </main>
-
-        <%- include('../partials/footer')%>
-        <script src="/js/validationFrontLogin.js"></script>
+            <label class="cursiva">Recordar datos</label>
+            <label class="cursiva">¿Olvidaste la contraseña?</label>
+            <button>
+                <input type="submit"  value="Ingresar">
+            </button>
+            <br>
+            <label for="">Mantener sesión iniciada</label>
+            <input type="checkbox" name="remember" id="">
+            <br>
+            <p class="registro"><a href="/users/register">Registrate</a></p>
+            <span class="material-symbols-outlined email">mail</span>
+        </form>
+    </main>
+    <%- include('../partials/footer')%>
+    <script src="/js/validationFrontLogin.js"></script>
 </body>
-
 </html>
